2005-10-23  Nicola Pero  <n.pero@mi.flashnet.it>

	* which_lib.c (search_for_lib_with_suffix_and_ext): Enhanced
	changes to make the code simpler and easier to understand and
	avoid duplicate checks for static libs.  Needs testing.

2005-10-23  Richard Frith-Macdonald <rfm@gnu.org>

	* which_lib.c: Tidied a little on lines suggested by David Ayers
	* configure.ac: Check for ctype.h
	* configure: regenerate
	* config.h.in: regenerate

2005-10-23  Jeremy Bettis

	* configure.ac: 
	* rules.make: 
	* target.make: 
	Use install -p so that doing a make install doesn't change the
	timestamp on all the headers and cause everything to need rebuilt.
	Don't create the obj dir (symlink) on mingw.
	Add -Wl,--enable-auto-import to link commands to make the compiler be
	quiet.
	* which_lib.c: Fixes to support other library types on mingw.
	Patches applied and edited to conform to GNUstep coding standard.

2005-10-20  Adam Fedor  <fedor@gnu.org>

	* config.make.in (GNUSTEP_CONFIG_FILE): Correct capitaliztion
	of substitution variable.

2005-10-19  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.guess: Updated to latest version.
	* config.sub: Idem.

2005-10-18  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Make sure that --prefix=xxx takes precedence over
	paths read from GNUstep.conf or inherited from the environment.
	* configure: Regenerated.
	
2005-10-17  Adam Fedor  <fedor@gnu.org>

	* target.make (netbsd): Remove static libs version of netbsd
	target and make (netbsdelf) work for all netbsd versions.
	* clean_os.sh: Don't clean netbsd targets. Fixes Bug #14635.

2005-10-14  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep.sh.in: Export GNUSTEP_USER_ROOT after setting it (Bug
	reported by Fred Kiefer <fredkiefer@gmx.de>).

2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* GNUstep.sh.in: Read system, local, network, user paths from
	configuration files and use the configuration files settings in
	preference to the hardcoded ones.